--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,7 +43,7 @@ header {
     /* ヘッダーの横幅を指定する */
     height: 9em;
     /* ヘッダーの高さを指定する */
-    padding: 10px;
+    padding: 10px !important;
     /* ヘッダーの余白を指定する(上下左右) */
     background-color: #eea631;
     /* ヘッダーの背景色を指定する */
