--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,3 +82,56 @@ th,
 td {
     border: none;
 }
+
+.button {
+	width: 160px;
+	margin: 0.4em;
+	padding: 1em;
+	line-height: 1.4;
+	cursor: pointer;
+	user-select: none;
+	transition: background-color 0.3s;
+	-webkit-transform: translateZ(0);
+	        transform: translateZ(0);
+	text-decoration: none;
+	color: #ec407a;
+	border: 1px solid #ec407a;
+	background: transparent;
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.button:before {
+	position: absolute;
+	top: -16px;
+	right: -16px;
+	bottom: -16px;
+	left: -16px;
+	content: '';
+	-webkit-transition-duration: 0.3s;
+	        transition-duration: 0.3s;
+	-webkit-transition-property: top right bottom left;
+	        transition-property: top right bottom left;
+	opacity: 0;
+	border: 4px solid rgba(236,64,122,0.5);
+}
+.button:hover:before {
+	top: -8px;
+	right: -8px;
+	bottom: -8px;
+	left: -8px;
+	opacity: 1;
+}
+.button:active {
+	color: #ffffff;
+	background-color: #ec407a;
+}
+.button:active:before {
+	top: -17px;
+	right: -17px;
+	bottom: -17px;
+	left: -17px;
+}
+.button:hover,
+.button:focus {
+	color: #ec407a;
+	border: 1px solid #ec407a;
+}
